# PACMAN-multiplayer

./: .gitignore  CMakeLists.txt  Makefile  README.md  status.txt
assets/: Demo_Simulation.webm
client/: CMakeLists.txt
client/include/client/: Animation.h  Audio.h  AudioManager.h  Character.h  Client.h  Direction.h  Entity.h  GamePlay.h  GameWindow.h  Ghost.h  LoadSprites.h  Maze.h  PacMan.h  State.h  StateMachine.h  network.h
client/include/client/SFML-2.5.1/lib/: libsfml-graphics.so.2.5.1  libsfml-network.so.2.5.1  libsfml-window.so.2.5.1
client/include/client/SFML-2.5.1/lib/pkgconfig/: sfml-audio.pc  sfml-network.pc  sfml-system.pc  sfml-window.pc
client/src/: Animation.cpp  AudioManager.cpp  Character.cpp  Client.cpp  GamePlay.cpp  GameWindow.cpp  Ghost.cpp  LoadSprites.cpp  Logger.cpp  Main.cpp  Maze.cpp  PacMan.cpp  StateMachine.cpp
cmake/: CompileFeatures.cmake
common/: CMakeLists.txt
common/src/: Netcommands.cpp
include/: Animation.h  AudioManager.h  Character.h  GamePlay.h  GameWindow.h  Ghost.h  LoadSprites.h  Logger.h  Maze.h  PacMan.h  State.h  StateMachine.h
include/SFML-2.5.1/lib/: libsfml-audio.so.2.5.1
include/SFML-2.5.1/lib/pkgconfig/: sfml-all.pc  sfml-graphics.pc
scripts/: build.sh  run.sh
server/: CMakeLists.txt  Makefile
server/include/server/: CharacterServer.h  EntityServer.h  GhostServer.h  MazeServer.h  PacManServer.h  Server.h  StateServer.h  networkServer.h
server/src/: CharacterServer.cpp  GhostServer.cpp  MazeServer.cpp  PacManServer.cpp  Server.cpp
src/: Animation.cpp  AudioManager.cpp  Character.cpp  GamePlay.cpp  GameWindow.cpp  Ghost.cpp  LoadSprites.cpp  Logger.cpp  Main.cpp  Maze.cpp  PacMan.cpp  State.cpp  StateMachine.cpp
